kubernetes/apps/base/immich/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-except-namespace
  namespace: immich
spec:
  description: "Allow traffic only to the namespace itself"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
  ingress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-cluster
  namespace: immich
spec:
  description: "Allow CloudNativePG pods access"
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: immich-cluster
  ingress:
    # Allow access from other cluster pods
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            cnpg.io/cluster: immich-cluster
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
            - port: status
              protocol: TCP
    # Allow access from immich pods
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            app.kubernetes.io/name: immich
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-egress
  namespace: immich
spec:
  description: "Allow egress to centralized Dragonfly (dragonfly namespace)"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dragonfly
            app.kubernetes.io/part-of: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-api
  namespace: immich
spec:
  description: "Allow traffic from and to immich api"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/controller: api
  ingress:
    # Envoy to immich
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: http
              protocol: TCP

    # Pangolin to immich
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: pangolin
            app.kubernetes.io/name: pangolin
            app.kubernetes.io/component: newt
      toPorts:
        - ports:
            - port: http
              protocol: TCP

    # Alloy to immich
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: metrics
              protocol: TCP

    # Uptime to immich
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: uptime
            app.kubernetes.io/name: uptime
            app.kubernetes.io/instance: uptime
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  # Allow immich to access github.com
  egress:
    - toFQDNs:
        - matchName: api.github.com
        - matchName: authentik.${EXTERNAL_DOMAIN}
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: maddy
            app.kubernetes.io/name: maddy
            app.kubernetes.io/instance: maddy
      toPorts:
        - ports:
            - port: smtp
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-microservices
  namespace: immich
spec:
  description: "Allow traffic from and to immich microservices"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/controller: microservices
  ingress:
    # Alloy to immich
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: metrics
              protocol: TCP
  egress:
    # Allow immich to access github.com
    - toFQDNs:
        - matchName: api.github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  description: "Control access to/from immich machine learning server"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/controller: machine-learning
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            app.kubernetes.io/name: immich
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: uptime
            app.kubernetes.io/name: uptime
            app.kubernetes.io/instance: uptime
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  egress:
    # Download models
    - toEntities:
        - world
